# modorganizer-tool_configurator

./: .gitignore  CMakeLists.txt  appveyor.yml  vcpkg.json
src/: CMakeLists.txt  configurator_en.ts  pyCfg.py  pyCfgDialog.ui  pyCfg_en.ts  settings.json
