CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

ADD_COMPILE_OPTIONS($<$<CXX_COMPILER_ID:MSVC>:/MP>)

SET(PROJ_NAME tool_configurator LANGUAGES NONE)

PROJECT(${PROJ_NAME})

SET(DEPENDENCIES_DIR CACHE PATH "")

LIST(APPEND CMAKE_PREFIX_PATH ${QT_ROOT}/lib/cmake)

MESSAGE(${PYTHON_ROOT})

ADD_SUBDIRECTORY(src)
